# sensor_server

./: CMakeLists.txt  LICENSE
services/alice/: CMakeLists.txt  README.md  main.c  main_curl.c
services/alice/speech-kit/: generator.sh  replay.sh
snode/: CMakeLists.txt
snode/fcommon/include/fcommon/: limits.h  log.h
snode/fcommon/src/: limits.h  log.h
snode/fnet/: CMakeLists.txt
snode/fnet/include/fnet/: ip_address.h  socket.h
snode/fnet/src/: ip_address.c  ip_address.h  socket.h
snode/fnet/src/os/linux/: socket.c
snode/fnet/test/: CMakeLists.txt  client.c  server.c
snode/fnode/: CMakeLists.txt
snode/fnode/include/fnode/: service.h
snode/fnode/src/: commands.h  service.c  service.h
snode/fnode/test/: CMakeLists.txt  main.c
speech-kit/: .gitignore  CMakeLists.txt  README.md  main.c  play.sh  play_angry.sh  server.py
